--- a/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented.yaml
@@ -72,35 +72,38 @@ models:
       R@1000:
         - 0.8542
         - 0.8549
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      MAP@100:
-        - 0.1644
-        - 0.1681
-      MRR@100:
-        - 0.1660
-        - 0.1702
-      R@100:
-        - 0.6556
-        - 0.6566
-      R@1000:
-        - 0.8608
-        - 0.8639
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      MAP@100:
-        - 0.1663
-        - 0.1690
-      MRR@100:
-        - 0.1681
-        - 0.1710
-      R@100:
-        - 0.6535
-        - 0.6618
-      R@1000:
-        - 0.8657
-        - 0.8642
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      MAP@100:
+#        - 0.1644
+#        - 0.1681
+#      MRR@100:
+#        - 0.1660
+#        - 0.1702
+#      R@100:
+#        - 0.6556
+#        - 0.6566
+#      R@1000:
+#        - 0.8608
+#        - 0.8639
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -collection MsMarcoV2DocCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      MAP@100:
+#        - 0.1663
+#        - 0.1690
+#      MRR@100:
+#        - 0.1681
+#        - 0.1710
+#      R@100:
+#        - 0.6535
+#        - 0.6618
+#      R@1000:
+#        - 0.8657
+#        - 0.8642
