--- a/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-docTTTTTquery.yaml
@@ -64,30 +64,33 @@ models:
         - 0.7993
       R@1000:
         - 0.9259
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3
-    results:
-      AP@1000:
-        - 0.1841
-      RR@100:
-        - 0.1834
-      R@100:
-        - 0.7422
-      R@1000:
-        - 0.9126
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio
-    results:
-      AP@1000:
-        - 0.1841
-      RR@100:
-        - 0.1833
-      R@100:
-        - 0.7441
-      R@1000:
-        - 0.9128
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3
+#    results:
+#      AP@1000:
+#        - 0.1841
+#      RR@100:
+#        - 0.1834
+#      R@100:
+#        - 0.7422
+#      R@1000:
+#        - 0.9126
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio
+#    results:
+#      AP@1000:
+#        - 0.1841
+#      RR@100:
+#        - 0.1833
+#      R@100:
+#        - 0.7441
+#      R@1000:
+#        - 0.9128
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 4.68 -bm25.b 0.87
@@ -100,27 +103,30 @@ models:
         - 0.8612
       R@1000:
         - 0.9553
-  - name: bm25-tuned+rm3
-    display: +RM3
-    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3
-    results:
-      AP@1000:
-        - 0.2628
-      RR@100:
-        - 0.2623
-      R@100:
-        - 0.8390
-      R@1000:
-        - 0.9522
-  - name: bm25-tuned+rocchio
-    display: +Rocchio
-    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rocchio
-    results:
-      AP@1000:
-        - 0.2648
-      RR@100:
-        - 0.2643
-      R@100:
-        - 0.8448
-      R@1000:
-        - 0.9534
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-tuned+rm3
+#    display: +RM3
+#    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rm3
+#    results:
+#      AP@1000:
+#        - 0.2628
+#      RR@100:
+#        - 0.2623
+#      R@100:
+#        - 0.8390
+#      R@1000:
+#        - 0.9522
+#  - name: bm25-tuned+rocchio
+#    display: +Rocchio
+#    params: -bm25 -bm25.k1 4.68 -bm25.b 0.87 -rocchio
+#    results:
+#      AP@1000:
+#        - 0.2648
+#      RR@100:
+#        - 0.2643
+#      R@100:
+#        - 0.8448
+#      R@1000:
+#        - 0.9534
