--- a/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented-docTTTTTquery.yaml
@@ -64,30 +64,33 @@ models:
         - 0.8479
       R@1000:
         - 0.9490
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2808
-      RR@100:
-        - 0.2803
-      R@100:
-        - 0.8477
-      R@1000:
-        - 0.9551
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2846
-      RR@100:
-        - 0.2841
-      R@100:
-        - 0.8479
-      R@1000:
-        - 0.9551
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2808
+#      RR@100:
+#        - 0.2803
+#      R@100:
+#        - 0.8477
+#      R@1000:
+#        - 0.9551
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2846
+#      RR@100:
+#        - 0.2841
+#      R@100:
+#        - 0.8479
+#      R@1000:
+#        - 0.9551
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -100,27 +103,30 @@ models:
         - 0.8627
       R@1000:
         - 0.9530
-  - name: bm25-tuned+rm3
-    display: +RM3
-    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2978
-      RR@100:
-        - 0.2973
-      R@100:
-        - 0.8573
-      R@1000:
-        - 0.9563
-  - name: bm25-tuned+rocchio
-    display: +Rocchio
-    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2998
-      RR@100:
-        - 0.2994
-      R@100:
-        - 0.8600
-      R@1000:
-        - 0.9571
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-tuned+rm3
+#    display: +RM3
+#    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2978
+#      RR@100:
+#        - 0.2973
+#      R@100:
+#        - 0.8573
+#      R@1000:
+#        - 0.9563
+#  - name: bm25-tuned+rocchio
+#    display: +Rocchio
+#    params: -bm25 -bm25.k1 2.56 -bm25.b 0.59 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2998
+#      RR@100:
+#        - 0.2994
+#      R@100:
+#        - 0.8600
+#      R@1000:
+#        - 0.9571
