--- a/src/main/resources/regression/msmarco-doc-segmented.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented.yaml
@@ -64,66 +64,69 @@ models:
         - 0.7847
       R@1000:
         - 0.9178
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2420
-      RR@100:
-        - 0.2413
-      R@100:
-        - 0.7891
-      R@1000:
-        - 0.9351
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2453
-      RR@100:
-        - 0.2447
-      R@100:
-        - 0.7915
-      R@1000:
-        - 0.9351
-  - name: bm25-default+rocchio-neg
-    display: +Rocchio*
-    params: -bm25 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2464
-      RR@100:
-        - 0.2458
-      R@100:
-        - 0.7888
-      R@1000:
-        - 0.9339
-  - name: bm25-default+ax
-    display: +Ax
-    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2208
-      RR@100:
-        - 0.2201
-      R@100:
-        - 0.7710
-      R@1000:
-        - 0.9264
-  - name: bm25-default+prf
-    display: +PRF
-    params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2325
-      RR@100:
-        - 0.2318
-      R@100:
-        - 0.7722
-      R@1000:
-        - 0.9185
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2420
+#      RR@100:
+#        - 0.2413
+#      R@100:
+#        - 0.7891
+#      R@1000:
+#        - 0.9351
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2453
+#      RR@100:
+#        - 0.2447
+#      R@100:
+#        - 0.7915
+#      R@1000:
+#        - 0.9351
+#  - name: bm25-default+rocchio-neg
+#    display: +Rocchio*
+#    params: -bm25 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2464
+#      RR@100:
+#        - 0.2458
+#      R@100:
+#        - 0.7888
+#      R@1000:
+#        - 0.9339
+#  - name: bm25-default+ax
+#    display: +Ax
+#    params: -bm25 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2208
+#      RR@100:
+#        - 0.2201
+#      R@100:
+#        - 0.7710
+#      R@1000:
+#        - 0.9264
+#  - name: bm25-default+prf
+#    display: +PRF
+#    params: -bm25 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2325
+#      RR@100:
+#        - 0.2318
+#      R@100:
+#        - 0.7722
+#      R@1000:
+#        - 0.9185
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
@@ -136,63 +139,66 @@ models:
         - 0.8013
       R@1000:
         - 0.9311
-  - name: bm25-tuned+rm3
-    display: +RM3
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2455
-      RR@100:
-        - 0.2448
-      R@100:
-        - 0.7978
-      R@1000:
-        - 0.9359
-  - name: bm25-tuned+rocchio
-    display: +Rocchio
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2482
-      RR@100:
-        - 0.2475
-      R@100:
-        - 0.8013
-      R@1000:
-        - 0.9395
-  - name: bm25-tuned+rocchio-neg
-    display: +Rocchio*
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2497
-      RR@100:
-        - 0.2491
-      R@100:
-        - 0.8042
-      R@1000:
-        - 0.9395
-  - name: bm25-tuned+ax
-    display: +Ax
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2330
-      RR@100:
-        - 0.2324
-      R@100:
-        - 0.7888
-      R@1000:
-        - 0.9353
-  - name: bm25-tuned+prf
-    display: +PRF
-    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      AP@1000:
-        - 0.2276
-      RR@100:
-        - 0.2269
-      R@100:
-        - 0.7687
-      R@1000:
-        - 0.9157
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-tuned+rm3
+#    display: +RM3
+#    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rm3 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2455
+#      RR@100:
+#        - 0.2448
+#      R@100:
+#        - 0.7978
+#      R@1000:
+#        - 0.9359
+#  - name: bm25-tuned+rocchio
+#    display: +Rocchio
+#    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2482
+#      RR@100:
+#        - 0.2475
+#      R@100:
+#        - 0.8013
+#      R@1000:
+#        - 0.9395
+#  - name: bm25-tuned+rocchio-neg
+#    display: +Rocchio*
+#    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -rocchio -rocchio.useNegative -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2497
+#      RR@100:
+#        - 0.2491
+#      R@100:
+#        - 0.8042
+#      R@1000:
+#        - 0.9395
+#  - name: bm25-tuned+ax
+#    display: +Ax
+#    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -axiom -axiom.deterministic -rerankCutoff 20 -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2330
+#      RR@100:
+#        - 0.2324
+#      R@100:
+#        - 0.7888
+#      R@1000:
+#        - 0.9353
+#  - name: bm25-tuned+prf
+#    display: +PRF
+#    params: -bm25 -bm25.k1 2.16 -bm25.b 0.61 -bm25prf -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      AP@1000:
+#        - 0.2276
+#      RR@100:
+#        - 0.2269
+#      R@100:
+#        - 0.7687
+#      R@1000:
+#        - 0.9157
