--- a/src/main/resources/regression/msmarco-passage-doc2query.yaml
+++ b/src/main/resources/regression/msmarco-passage-doc2query.yaml
@@ -64,18 +64,21 @@ models:
         - 0.7133
       R@1000:
         - 0.8900
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3
-    results:
-      AP@1000:
-        - 0.2030
-      RR@10:
-        - 0.1941
-      R@100:
-        - 0.7003
-      R@1000:
-        - 0.8909
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3
+#    results:
+#      AP@1000:
+#        - 0.2030
+#      RR@10:
+#        - 0.1941
+#      R@100:
+#        - 0.7003
+#      R@1000:
+#        - 0.8909
   - name: bm25-tuned
     display: BM25 (tuned)
     params: -bm25 -bm25.k1 0.82 -bm25.b 0.68
@@ -88,15 +91,18 @@ models:
         - 0.7171
       R@1000:
         - 0.8911
-  - name: bm25-tuned+rm3
-    display: +RM3
-    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
-    results:
-      AP@1000:
-        - 0.2081
-      RR@10:
-        - 0.1992
-      R@100:
-        - 0.7051
-      R@1000:
-        - 0.8946
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-tuned+rm3
+#    display: +RM3
+#    params: -bm25 -bm25.k1 0.82 -bm25.b 0.68 -rm3
+#    results:
+#      AP@1000:
+#        - 0.2081
+#      RR@10:
+#        - 0.1992
+#      R@100:
+#        - 0.7051
+#      R@1000:
+#        - 0.8946
