--- a/src/main/resources/regression/msmarco-passage-splade-distil-cocodenser-medium.yaml
+++ b/src/main/resources/regression/msmarco-passage-splade-distil-cocodenser-medium.yaml
@@ -67,27 +67,30 @@ models:
         - 0.9111
       R@1000:
         - 0.9817
-  - name: rm3
-    display: +RM3
-    params: -impact -pretokenized -rm3
-    results:
-      AP@1000:
-        - 0.3020
-      RR@10:
-        - 0.2936
-      R@100:
-        - 0.8750
-      R@1000:
-        - 0.9750
-  - name: rocchio
-    display: +Rocchio
-    params: -impact -pretokenized -rocchio
-    results:
-      AP@1000:
-        - 0.3345
-      RR@10:
-        - 0.3279
-      R@100:
-        - 0.8911
-      R@1000:
-        - 0.9804
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: rm3
+#    display: +RM3
+#    params: -impact -pretokenized -rm3
+#    results:
+#      AP@1000:
+#        - 0.3020
+#      RR@10:
+#        - 0.2936
+#      R@100:
+#        - 0.8750
+#      R@1000:
+#        - 0.9750
+#  - name: rocchio
+#    display: +Rocchio
+#    params: -impact -pretokenized -rocchio
+#    results:
+#      AP@1000:
+#        - 0.3345
+#      RR@10:
+#        - 0.3279
+#      R@100:
+#        - 0.8911
+#      R@1000:
+#        - 0.9804
