--- a/src/main/resources/regression/msmarco-passage-splade-pp-ed.yaml
+++ b/src/main/resources/regression/msmarco-passage-splade-pp-ed.yaml
@@ -67,27 +67,30 @@ models:
         - 0.9095
       R@1000:
         - 0.9831
-  - name: rm3
-    display: +RM3
-    params: -impact -pretokenized -rm3
-    results:
-      AP@1000:
-        - 0.2967
-      RR@10:
-        - 0.2882
-      R@100:
-        - 0.8728
-      R@1000:
-        - 0.9744
-  - name: rocchio
-    display: +Rocchio
-    params: -impact -pretokenized -rocchio
-    results:
-      AP@1000:
-        - 0.3365
-      RR@10:
-        - 0.3293
-      R@100:
-        - 0.8967
-      R@1000:
-        - 0.9811
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: rm3
+#    display: +RM3
+#    params: -impact -pretokenized -rm3
+#    results:
+#      AP@1000:
+#        - 0.2967
+#      RR@10:
+#        - 0.2882
+#      R@100:
+#        - 0.8728
+#      R@1000:
+#        - 0.9744
+#  - name: rocchio
+#    display: +Rocchio
+#    params: -impact -pretokenized -rocchio
+#    results:
+#      AP@1000:
+#        - 0.3365
+#      RR@10:
+#        - 0.3293
+#      R@100:
+#        - 0.8967
+#      R@1000:
+#        - 0.9811
