--- a/src/main/resources/regression/msmarco-passage-unicoil.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil.yaml
@@ -67,27 +67,30 @@ models:
         - 0.8609
       R@1000:
         - 0.9582
-  - name: rm3
-    display: +RM3
-    params: -impact -pretokenized -rm3
-    results:
-      AP@1000:
-        - 0.2918
-      RR@10:
-        - 0.2836
-      R@100:
-        - 0.8425
-      R@1000:
-        - 0.9603
-  - name: rocchio
-    display: +Rocchio
-    params: -impact -pretokenized -rocchio
-    results:
-      AP@1000:
-        - 0.2950
-      RR@10:
-        - 0.2869
-      R@100:
-        - 0.8525
-      R@1000:
-        - 0.9630
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: rm3
+#    display: +RM3
+#    params: -impact -pretokenized -rm3
+#    results:
+#      AP@1000:
+#        - 0.2918
+#      RR@10:
+#        - 0.2836
+#      R@100:
+#        - 0.8425
+#      R@1000:
+#        - 0.9603
+#  - name: rocchio
+#    display: +Rocchio
+#    params: -impact -pretokenized -rocchio
+#    results:
+#      AP@1000:
+#        - 0.2950
+#      RR@10:
+#        - 0.2869
+#      R@100:
+#        - 0.8525
+#      R@1000:
+#        - 0.9630
