--- a/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-d2q-t5.yaml
@@ -72,35 +72,38 @@ models:
       R@1000:
         - 0.8614
         - 0.8568
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2DocCollection
-    results:
-      MAP@100:
-        - 0.1126
-        - 0.1151
-      MRR@100:
-        - 0.1141
-        - 0.1170
-      R@100:
-        - 0.5924
-        - 0.5922
-      R@1000:
-        - 0.8191
-        - 0.8247
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2DocCollection
-    results:
-      MAP@100:
-        - 0.1152
-        - 0.1170
-      MRR@100:
-        - 0.1168
-        - 0.1187
-      R@100:
-        - 0.5961
-        - 0.5963
-      R@1000:
-        - 0.8199
-        - 0.8288
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -collection MsMarcoV2DocCollection
+#    results:
+#      MAP@100:
+#        - 0.1126
+#        - 0.1151
+#      MRR@100:
+#        - 0.1141
+#        - 0.1170
+#      R@100:
+#        - 0.5924
+#        - 0.5922
+#      R@1000:
+#        - 0.8191
+#        - 0.8247
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -collection MsMarcoV2DocCollection
+#    results:
+#      MAP@100:
+#        - 0.1152
+#        - 0.1170
+#      MRR@100:
+#        - 0.1168
+#        - 0.1187
+#      R@100:
+#        - 0.5961
+#        - 0.5963
+#      R@1000:
+#        - 0.8199
+#        - 0.8288
