--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-noexp-0shot-v2.yaml
@@ -76,35 +76,38 @@ models:
       R@1000:
         - 0.8987
         - 0.8995
-  - name: unicoil-noexp-0shot+rm3
-    display: +RM3
-    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      MAP@100:
-        - 0.1967
-        - 0.2066
-      MRR@100:
-        - 0.1986
-        - 0.2091
-      R@100:
-        - 0.7447
-        - 0.7468
-      R@1000:
-        - 0.9030
-        - 0.9082
-  - name: unicoil-noexp-0shot+rocchio
-    display: +Rocchio
-    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
-    results:
-      MAP@100:
-        - 0.2011
-        - 0.2090
-      MRR@100:
-        - 0.2034
-        - 0.2112
-      R@100:
-        - 0.7520
-        - 0.7540
-      R@1000:
-        - 0.9084
-        - 0.9136
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: unicoil-noexp-0shot+rm3
+#    display: +RM3
+#    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      MAP@100:
+#        - 0.1967
+#        - 0.2066
+#      MRR@100:
+#        - 0.1986
+#        - 0.2091
+#      R@100:
+#        - 0.7447
+#        - 0.7468
+#      R@1000:
+#        - 0.9030
+#        - 0.9082
+#  - name: unicoil-noexp-0shot+rocchio
+#    display: +Rocchio
+#    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
+#    results:
+#      MAP@100:
+#        - 0.2011
+#        - 0.2090
+#      MRR@100:
+#        - 0.2034
+#        - 0.2112
+#      R@100:
+#        - 0.7520
+#        - 0.7540
+#      R@1000:
+#        - 0.9084
+#        - 0.9136
