--- a/src/main/resources/regression/msmarco-v2-passage-d2q-t5.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-d2q-t5.yaml
@@ -72,35 +72,38 @@ models:
       R@1000:
         - 0.7083
         - 0.7151
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2PassageCollection
-    results:
-      MAP@100:
-        - 0.0938
-        - 0.0976
-      MRR@100:
-        - 0.0947
-        - 0.0984
-      R@100:
-        - 0.4713
-        - 0.4803
-      R@1000:
-        - 0.7181
-        - 0.7222
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2PassageCollection
-    results:
-      MAP@100:
-        - 0.0943
-        - 0.0990
-      MRR@100:
-        - 0.0952
-        - 0.0997
-      R@100:
-        - 0.4723
-        - 0.4815
-      R@1000:
-        - 0.7211
-        - 0.7274
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -collection MsMarcoV2PassageCollection
+#    results:
+#      MAP@100:
+#        - 0.0938
+#        - 0.0976
+#      MRR@100:
+#        - 0.0947
+#        - 0.0984
+#      R@100:
+#        - 0.4713
+#        - 0.4803
+#      R@1000:
+#        - 0.7181
+#        - 0.7222
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -collection MsMarcoV2PassageCollection
+#    results:
+#      MAP@100:
+#        - 0.0943
+#        - 0.0990
+#      MRR@100:
+#        - 0.0952
+#        - 0.0997
+#      R@100:
+#        - 0.4723
+#        - 0.4815
+#      R@1000:
+#        - 0.7211
+#        - 0.7274
