--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -76,35 +76,38 @@ models:
       R@1000:
         - 0.7616
         - 0.7671
-  - name: unicoil-0shot+rm3
-    display: +RM3
-    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
-    results:
-      MAP@100:
-        - 0.1319
-        - 0.1343
-      MRR@100:
-        - 0.1330
-        - 0.1352
-      R@100:
-        - 0.5521
-        - 0.5552
-      R@1000:
-        - 0.7736
-        - 0.7700
-  - name: unicoil-0shot+rocchio
-    display: +Rocchio
-    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
-    results:
-      MAP@100:
-        - 0.1319
-        - 0.1371
-      MRR@100:
-        - 0.1334
-        - 0.1380
-      R@100:
-        - 0.5557
-        - 0.5696
-      R@1000:
-        - 0.7800
-        - 0.7849
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: unicoil-0shot+rm3
+#    display: +RM3
+#    params: -parallelism 16 -impact -pretokenized -rm3 -collection JsonVectorCollection
+#    results:
+#      MAP@100:
+#        - 0.1319
+#        - 0.1343
+#      MRR@100:
+#        - 0.1330
+#        - 0.1352
+#      R@100:
+#        - 0.5521
+#        - 0.5552
+#      R@1000:
+#        - 0.7736
+#        - 0.7700
+#  - name: unicoil-0shot+rocchio
+#    display: +Rocchio
+#    params: -parallelism 16 -impact -pretokenized -rocchio -collection JsonVectorCollection
+#    results:
+#      MAP@100:
+#        - 0.1319
+#        - 0.1371
+#      MRR@100:
+#        - 0.1334
+#        - 0.1380
+#      R@100:
+#        - 0.5557
+#        - 0.5696
+#      R@1000:
+#        - 0.7800
+#        - 0.7849
