--- a/src/main/resources/regression/msmarco-v2-passage.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage.yaml
@@ -72,35 +72,38 @@ models:
       R@1000:
         - 0.5733
         - 0.5839
-  - name: bm25-default+rm3
-    display: +RM3
-    params: -bm25 -rm3 -collection MsMarcoV2PassageCollection
-    results:
-      MAP@100:
-        - 0.0621
-        - 0.0651
-      MRR@100:
-        - 0.0630
-        - 0.0659
-      R@100:
-        - 0.3370
-        - 0.3435
-      R@1000:
-        - 0.5947
-        - 0.6062
-  - name: bm25-default+rocchio
-    display: +Rocchio
-    params: -bm25 -rocchio -collection MsMarcoV2PassageCollection
-    results:
-      MAP@100:
-        - 0.0622
-        - 0.0663
-      MRR@100:
-        - 0.0631
-        - 0.0671
-      R@100:
-        - 0.3413
-        - 0.3516
-      R@1000:
-        - 0.5968
-        - 0.6104
+# PRF regressions are no longer maintained for sparse judgments to reduce running times.
+# (commenting out instead of removing; in case these numbers are needed, just uncomment and rerun.)
+#
+#  - name: bm25-default+rm3
+#    display: +RM3
+#    params: -bm25 -rm3 -collection MsMarcoV2PassageCollection
+#    results:
+#      MAP@100:
+#        - 0.0621
+#        - 0.0651
+#      MRR@100:
+#        - 0.0630
+#        - 0.0659
+#      R@100:
+#        - 0.3370
+#        - 0.3435
+#      R@1000:
+#        - 0.5947
+#        - 0.6062
+#  - name: bm25-default+rocchio
+#    display: +Rocchio
+#    params: -bm25 -rocchio -collection MsMarcoV2PassageCollection
+#    results:
+#      MAP@100:
+#        - 0.0622
+#        - 0.0663
+#      MRR@100:
+#        - 0.0631
+#        - 0.0671
+#      R@100:
+#        - 0.3413
+#        - 0.3516
+#      R@1000:
+#        - 0.5968
+#        - 0.6104
